--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -10,6 +10,7 @@
 
 :root {
     --primary: #1d4ed8;
+    --primaryHover: #356afa;
     --secondary: #facc15;
     --text1: #ffffff;
     --text2: #020617;
