--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -30,7 +30,7 @@
     --el-menu-active-color: var(--secondary) !important;
     --el-menu-text-color: var(--text1) !important;
     --el-menu-hover-text-color: red !important;
-    --el-menu-hover-bg-color: var(--primary) !important;
+    --el-menu-hover-bg-color: #00408199 !important;
     --el-menu-bg-color: var(--background2) !important;
     --el-menu-border-color: transparent !important;
     --el-menu-item-height: 40px !important;
